--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/bootstrap.css" />
+    <style>
+        .highLight{
+            background-color: orange !important;
+            color: #fff !important;
+        }
+    </style>
     <title>React脚手架</title>
 </head>
 <body>
